--- a/examples/lesson5/ordered-list.html
+++ b/examples/lesson5/ordered-list.html
@@ -20,8 +20,8 @@
         </li>
           
         <li>Enjoy!</li>
-
       </ol>
     </div>
+    <p>Just checking how commit works when there is already an existing file</p>
 </body>
 </html>
