--- a/examples/lesson6/html-entities.html
+++ b/examples/lesson6/html-entities.html
@@ -14,7 +14,7 @@
             actually strive to do the deeds; who knows great enthusiasms, the great devotions; who spends himself
             in a worthy cause; who at the best knows in the end the triumph of high achievement, and who at the 
             worst, if he fails, at least fails while daring greatly, so that his place shall never be with those
-            cold and timid souls who neither know victory nor defeat."
+            cold and timid souls who neither know victory&nbsp;nor&nbsp;defeat."
         </p>
         <p>Theodor Roosevelt 1910 &copy; Copyright</p>
     </body>
