--- a/examples/lesson9-css/css-syntax.html
+++ b/examples/lesson9-css/css-syntax.html
@@ -7,12 +7,21 @@
             p {
                 color: blue;
                 font-size: 20px;
-                width: 200px;
             }
 
             h1 {
                 color: green;
                 font-size: 36px;
+                text-align: center;
+            }
+
+            h2 {
+                color: red;
+                font-weight: bolder;
+                font-size: xx-large;
+            }
+
+            body {
                 text-align: center;
             }
         </style>
