--- a/examples/lesson11-css/child-selector.html
+++ b/examples/lesson11-css/child-selector.html
@@ -5,14 +5,14 @@
         <title>Child Selector</title>
         <style>
             /* any article element which is a direct child of a section element,i.e., any article element whose immediate parent is a section element. */
-            xxx {
+            section > article{
             color: green;
             font-size: 24px;
             }
 
             /* any h2 element which is a direct child of a section element,i.e., any h2 element whose immediate parent is a section element. */
-            xxx {
-            color: green;
+            section > h2 {
+            color: rgb(172, 14, 64);
             }
         </style>
     </head>
