--- a/examples/lesson14-css/inheritance.html
+++ b/examples/lesson14-css/inheritance.html
@@ -3,6 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Inheritance in CSS</title>
+        <style>
+        body {
+            color: red;
+            text-align: center;
+            font-family: helvetica;
+        }
+        p {
+            color: blue;
+        }
+        </style>
     </head>
     <body>
         <h1>Cascade of CSS Example</h1>
