--- a/examples/lesson14-css/specificity.html
+++ b/examples/lesson14-css/specificity.html
@@ -3,6 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Specificty in CSS</title>
+        <style>
+            header.navigation p {
+                color: blue;
+            }
+            p.blurb {
+                color: red;
+            }
+            p {
+                color: green !important;
+            }
+        </style>
     </head>
     <body>
         <header class="navigation">
