--- a/examples/lesson14-css/origin.html
+++ b/examples/lesson14-css/origin.html
@@ -3,6 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Cascade of CSS</title>
+        <link rel="stylesheet" href="external.css">
+        <style>
+            p {
+                color: maroon;
+            }
+        </style>
     </head>
     <body>
         <h1>Origin Example</h1>
