--- a/examples/lesson15-css/font-size.html
+++ b/examples/lesson15-css/font-size.html
@@ -3,12 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Setting Font Size</title>
+        <style>
+        body {
+            font-size: 120%;
+        }
+        </style>
     </head>
     <body>
         <div>Regular text</div>
-        <div>2em text
-          <div>4em text
-            <div>2em again!</div>
+        <div style="font-size: 2em;">2em text
+          <div style="font-size: 2em;">4em text
+            <div style="font-size: .5em;">2em again!</div>
           </div>
         </div>
     </body>
