--- a/examples/lesson15-css/styling-text.html
+++ b/examples/lesson15-css/styling-text.html
@@ -3,6 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Styling Text</title>
+        <style>
+        .style {
+            font-family: Arial, Helvetica, sans-serif;
+            color: #0000ff;
+            font-style: italic;
+            font-weight: bold;
+            font-size: 24px;
+            text-transform: uppercase;
+            text-align: right;
+        }
+        </style>
     </head>
     <body>
         <p>You can get commonly used font combinations from <a href="http://www.w3schools.com/cssref/css_websafe_fonts.asp">http://www.w3schools.com/cssref/css_websafe_fonts.asp</a>. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quod necessitatibus a ullam dolorum amet reprehenderit sit laudantium reiciendis aperiam. </p>
