--- a/examples/lesson16-css/box.html
+++ b/examples/lesson16-css/box.html
@@ -4,21 +4,25 @@
         <meta charset="utf-8">
         <title>The Box Model</title>
         <style>
-            body {
+            * {
+                box-sizing: border-box;
                 margin: 0;
                 padding: 0;
+            }
+            body {
                 background-color: gray;
             }
-            #box {
+            #box, #boxtwo {
                 background-color: blue;
                 padding: 10px;
                 border: 5px solid black;
-                margin: 40px;
                 width: 300px;
-                box-sizing: border-box;
+                height: 50px;
+                margin-top: 50px;
+                overflow: auto;
             }
             #content {
-                background-color: #90ee90; //
+                background-color: #90ee90;
             }
             h1 {
                 margin-bottom: 30px;
@@ -30,6 +34,8 @@
         <div id="box">
             <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
             </div>
+        </div>
+        <div id="boxtwo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
         </div>
     </body>
 </html>
