--- a/examples/lesson18-css/floating.html
+++ b/examples/lesson18-css/floating.html
@@ -4,7 +4,36 @@
         <meta charset="utf-8">
         <title>Floating Elements</title>
         <style>
-            
+            div {
+                background-color: #00ffff;
+            }
+            p {
+                width: 50px;
+                height: 50px;
+                border: 1px solid black;
+                
+            }
+            #p1 {
+                background-color: #a52a2a;
+                float: left;
+                height: 150px;
+            }
+            #p2 {
+                background-color: #DEB887;
+                float: right;
+                height: 100px;
+            }
+            #p3 {
+                background-color: #5F9EA0;
+               clear: both;
+            }
+            #p4 {
+                background-color: #FF7F50;
+            }
+
+            section{
+                clear: left;
+            }
         </style>
     </head>
     <body>
