--- a/examples/lesson18-css/two-column.html
+++ b/examples/lesson18-css/two-column.html
@@ -4,7 +4,29 @@
         <meta charset="utf-8">
         <title>Two Column Design</title>
         <style>
-            
+            * {
+                box-sizing: border-box;
+            }
+            div {
+            background-color: #00FFFF;
+            }
+            p {
+            width: 50%;
+            border: 1px solid black;
+            float: left;
+            padding: 10px;
+            }
+
+            #p1 {
+            background-color: #A52A2A;
+            }
+            #p2 {
+            background-color: #DEB887;
+            }
+
+            section {
+            clear: left;
+            }
         </style>
     </head>
     <body>
