--- a/examples/lesson23-css/grid.html
+++ b/examples/lesson23-css/grid.html
@@ -2,18 +2,21 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bootstrap Starter Page</title>
+        <title>Bootstrap Starter Page - Grid</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1>Hello Coursera!</h1>
-        <h2>Bootstrap lessons</h2>
+        <div>
+            <div>Col 1</div>
+            <div>Col 2</div>
+            <div>Col 3</div>
+        </div>
 
         <!-- jQuery (Bootstrap JS plugins depend on it) -->
-        <script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/jquery-1.11.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
     </body>
