--- a/examples/lesson23-css/grid.html
+++ b/examples/lesson23-css/grid.html
@@ -9,10 +9,24 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <div>
-            <div>Col 1</div>
-            <div>Col 2</div>
-            <div>Col 3</div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">Col 1</div>
+                <div class="col-md-4 col-sm-6">Col 2</div>
+                <div class="col-md-4 col-sm-6">Col 3</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-sm-6 col-xs-6">Col 1</div>
+                <div class="col-md-4 col-sm-6 col-xs-6">Col 2</div>
+                <div class="col-md-4 col-sm-6 col-xs-6">Col 3</div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-6">Col 1</div>
+                <div class="col-xs-6">Col 2</div>
+                <div class="col-xs-6">Col 3</div>
+              </div>
         </div>
 
         <!-- jQuery (Bootstrap JS plugins depend on it) -->
