--- a/examples/lesson25-css/before/index.html
+++ b/examples/lesson25-css/before/index.html
@@ -10,6 +10,17 @@
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
   </head>
 <body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="index.html" class="">
+            <div id="logo-img" alt="Logo image"></div>
+          </a>
+        </div>
+      </div>
+    </nav>
+  </header>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
