--- a/examples/lesson25-css/before/index.html
+++ b/examples/lesson25-css/before/index.html
@@ -8,15 +8,23 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
   <header>
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="">
-            <div id="logo-img" alt="Logo image"></div>
-          </a>
+        <a href="index.html" class="pull-left visible-md visible-lg">
+          <div id="logo-img"></div>
+        </a>
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Greg Boys Pinoy Dish</h1></a>
+            <p>
+              <img src="/lesson25-css/after/images/star-k-logo.png" alt="Kosher certification">
+              <span>Kosher Certified</span>
+            </p>
+          </div>
+          
         </div>
       </div>
     </nav>
