--- a/examples/lesson30-htmlcss/before/index.html
+++ b/examples/lesson30-htmlcss/before/index.html
@@ -67,6 +67,12 @@
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 
+  <div id="main-content" class="container">
+    <div class="jumbptron">
+      
+    </div>
+  </div>
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
