--- a/examples/lesson30-htmlcss/before/index.html
+++ b/examples/lesson30-htmlcss/before/index.html
@@ -69,10 +69,10 @@
 
   <div id="main-content" class="container">
     <div class="jumbptron">
-      
+      <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
     </div>
   </div>
-
+ 
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
