coding navigation tiles

--- a/examples/lesson32-htmlcss/before/index.html
+++ b/examples/lesson32-htmlcss/before/index.html
@@ -71,7 +71,20 @@
     <div class="jumbotron">
       <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
     </div>
-
+    
+    <div id="home-tiles" class="row">
+      <div class="col-md-4 col-sm-6 col-xs-12"></div>
+        <a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
+    </div>
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+    </div>
+    <div class="col-md-4 col-sm-12 col-xs-12">
+      <a href="https://www.google.com/maps/place/David+Chu's+China+Bistro/@39.3635874,-76.7138622,17z/data=!4m6!1m3!3m2!1s0x89c81a14e7817803:0xab20a0e99daa17ea!2sDavid+Chu's+China+Bistro!3m1!1s0x89c81a14e7817803:0xab20a0e99daa17ea" target="_blank">
+        <div id="map-tile">
+          <span>map</span>
+        </div>
+      </a>
   </div>
 
 
