--- a/examples/lesson40-js/index.html
+++ b/examples/lesson40-js/index.html
@@ -5,6 +5,7 @@
   </head>
 <body>
   <h1>Lecture 40</h1>
+  <h2>Basic training in JavaScript</h2>
 
   <script src="js/script.js"></script>
   <script>
