--- a/examples/lesson41-js/index.html
+++ b/examples/lesson41-js/index.html
@@ -5,6 +5,6 @@
     <script src="js/script.js"></script>
   </head>
 <body>
-  <h1>Lecture 41</h1>
+  <h1>Welcome to basic JavaScript</h1>
 </body>
 </html>
